--- a/content/posts/140629_CnL.md
+++ b/content/posts/140629_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
  
 So I took a week off the former "No One Likes to Read Boring Things" while I was prepping and starting to transition to [Digital Ocean](https://www.digitalocean.com/?refcode=4326c62c8117) -- yes it includes my referral code. Note that I said former- while the name was great, I thought it was too long, so from now on, I hope every can enjoy "Coffee & Links". Even if this not explicitly say that the content is interesting (not boring), it should be taken as a known. Nothing worse than reading something dry, boring or irrelevant. On that note, I hope you enjoy this week's reads.
 
-![](/../../../../images/local121.jpg)
+![Stained glass at Local 121 in Providence, RI](/../../../../images/local121.jpg)
 
 1. [All Side Projects Should Be "Silly"](http://www.fastcompany.com/3032394/hit-the-ground-running/spotifys-design-lead-on-why-side-projects-should-be-stupid?partner=rss). An inspiring interview from Tobias van Schneider, Head of Design, Spotify that set me to really rethink my side projects, ideas and approach to developing my skill set. 
 2. ["F'in" Up Innovation](http://blog.semilshah.com/2014/06/25/f-ing-up-innovation/). This was my favorite perspective of the week from Semil Shah. As soon as the FAA release their opinion on drones, I felt the same way and voiced it in a rather harsh way on Facebook. It's great they carved out a clause for AMZN but why limit the hobbyist or tinkerer? Innovation happens accidentally and in the evolving world we live in, the everyday citizen can help drive that.
