--- a/content/posts/140629_CnL.md
+++ b/content/posts/140629_CnL.md
@@ -1,6 +1,6 @@
 Title: Coffee & Links: 06/29/14
 Date: 2014-06-29 09:00
-Category: Coffee & Exposition
+Category: Coffee & Links
 Tags: weekly reads
 Slug: weekly-reads-06292014
 Author: Santosh Sankar
