--- a/content/posts/140706_CnL.md
+++ b/content/posts/140706_CnL.md
@@ -1,6 +1,6 @@
 Title: Coffee & Links: 07/06/14
 Date: 2014-07-06 07:30
-Category: Coffee & Exposition
+Category: Coffee & Links
 Tags: weekly reads
 Slug: weekly-reads-07062014
 disqus_identifier: weekly-reads-07062014
