--- a/content/posts/140727_CnL.md
+++ b/content/posts/140727_CnL.md
@@ -21,7 +21,7 @@ Spent the weekend up in the Shawgunk Mountains here in New York and couldn't be 
 
 * **<a href = "http://www.bothsidesofthetable.com/2014/07/22/the-changing-structure-of-the-vc-industry/" target="_blank">The Development of the VC Industry</a>**. Probably the most popular post in the venture community this week and rightfully so. I embedded the SlideShare below but please read Suster's post highlighting the salient points of his research. Fred Wilson also complemented the post with his <a href = "http://avc.com/2014/07/the-pro-rata-opportunity/" target="_blank">thoughts</a> on the pro-rate opportunity and how USV has captured upside in successful investments using pro ratas. A must read this week.
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/37268768" width="342" height="291" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"></div>
+<iframe src="//www.slideshare.net/slideshow/embed_code/37268768" width="342" height="291" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" align="center" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"></div>
 
 * **<a href = "http://mashable.com/2014/07/21/million-dollar-idea/?utm_cid=mash-com-li-pete-link" target="_blank">Brainstorming Great Ideas</a>**. This is a great Quora repost on Mashable and I think it's a great way to actively *think about how one thinks*. Check it out and try using it as a framework as you approach problem solving, new feature generation, new business generation or in any other situation.
 
