--- a/content/posts/140803_CnL.md
+++ b/content/posts/140803_CnL.md
@@ -37,4 +37,4 @@ Enjoy this week's edition of Coffee & Links with an extra link (see below). One 
 * **<a href = "http://newsroom.fb.com/news/2014/07/introducing-the-internet-org-app/" target="_blank">Internet.org App</a>**. While we cannot use this in the US, I thought it was interesting and important to share since it's Internet.org's first app. It launches in Zambia first and allows users to access a variety of internet services without the burden of data fees. Facebook, Google, Wikipedia and Facebook messenger are among the apps included.
 
 
-*Picture: Overlooking the canals of Bruges, Belgium, Summer 2013. Taken by Santosh Sankar using the Samsung Galaxy S4.*
+*Picture: Market plaza of Bruges, Belgium, Summer 2013. Taken by Santosh Sankar using the Samsung Galaxy S4.*
