--- a/content/posts/140810_CnL.md
+++ b/content/posts/140810_CnL.md
@@ -22,7 +22,7 @@ Wishing you a great Sunday. Hopefully there's something here that grabs your att
 
 * **<a href = "http://www.slideshare.net/500startups/06-mike-greenfield-lasarlike-final" target="_blank">A/B Testing</a>**. Before even getting submerged in the product world, I considered testing to be the most intuitive concept to observe the uptake and aide in the development of new features. I think this SlideShare is a succinct introduction into A/B testing. Embedded below for your convenience- 
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/37744374" width="427" height="356" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+<iframe src="//www.slideshare.net/slideshow/embed_code/37744374" width="427" height="356" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%; position: relative" allowfullscreen> </iframe>
 
 * **<a href = "https://www.youtube.com/watch?v=h4vsjP_sKTo" target="_blank">5 Areas That Will Impact Humanity the Most - Elon Musk</a>**. I just discovered this video that LinkedIn CEO, Jeff Weiner tweeted out. About 45 minutes but perfect to have one in the background on this lovely Sunday (I listened to it on Friday while cleaning).
 
