--- a/content/posts/140817_CnL.md
+++ b/content/posts/140817_CnL.md
@@ -30,7 +30,7 @@ Had quite a busy week-- spent my weekend (attempting) to catchup ahead of my Iri
 
 * **<a href = "https://www.indiegogo.com/projects/super-famicom-k1-console-killer" target="_blank">Super Famicon K1</a>**. I found this two days after it began funding at it was still at $0 vs a $5,000 goal. Famicon is based on the Nvidia Tegra K1 processor packaged in an old school form factor. The Tegra K1 boards even allow for wireless controllers. It runs Ubuntu and is capable of emulating 14+ systems including Sega, SNES, N64, Playstation and even PC games. I'm seriously considering this purchase-- "a blast to the past."
 
-* **<a href = "https://www.indiegogo.com/projects/maximuslife-goal-setting-made-visual-digital-and-fun-for-life-work" target="_blank"> </a>**. This really resonated with my HCI class' theme around "glance" designs. Visually setting and stating goals (both career and personal) with motivation, feedback/support and rewards through an app. For fitness goals, Maximus is launching with Mifit Shine as a partner. The campaign in and of itself also seems to be well designed with full details on the idea, a team and well-thought out rewards for supporters. Check it out.
+* **<a href = "https://www.indiegogo.com/projects/maximuslife-goal-setting-made-visual-digital-and-fun-for-life-work" target="_blank">Maximus</a>**. This really resonated with my HCI class' theme around "glance" designs. Visually setting and stating goals (both career and personal) with motivation, feedback/support and rewards through an app. For fitness goals, Maximus is launching with Mifit Shine as a partner. The campaign in and of itself also seems to be well designed with full details on the idea, a team and well-thought out rewards for supporters. Check it out.
 
 * **<a href = "http://www.google.com/edu/classroom/" target="_blank">Google Classroom</a>**. Emerging out of a closed beta, Google released it's Classroom product for the masses. I've always been interested in ed tech so this naturally caught my attention. Classroom helps teachers focus on teaching by offering collaboration tools, assignment tracking, feedback and communication utilities. I know several of my teacher friends who use Google Docs in the traditional sense but need to see if any use these education-specific models.
 
