--- a/content/posts/140928_CnL.md
+++ b/content/posts/140928_CnL.md
@@ -6,7 +6,7 @@ Slug: weekly-reads-28092014
 Author: Santosh Sankar
 Summary: A selection of articles from around the web focused on business, tech, products, product management, entrepreneurship, leadership, VC, growth and angel investing.
 
-Doesn't feel like fall in NYC with the temps well into the 80s-- not a bad weekend to grab your favorite list of weekly reads and head outdoors. If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=http://goo.gl/rL14cL A weekly list of interesting articles & products." target="_blank">share</a> this with your family and friends.
+Doesn't feel like fall in NYC with the temps well into the 80s-- not a bad weekend to grab your favorite list of weekly reads and head outdoors. If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=http://goo.gl/rL14cL" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/mauisunset.jpg" align = "center">
 
