--- a/content/posts/141005_CnL.md
+++ b/content/posts/141005_CnL.md
@@ -6,7 +6,7 @@ Slug: weekly-reads-05102014
 Author: Santosh Sankar
 Summary: A selection of articles from around the web focused on business, tech, products, product management, entrepreneurship, leadership, VC, growth and angel investing.
 
-Penn State was on bye this week so I had the opportunity to crush some Swift code and also visit the Smorgasburg in Brooklyn for some great food and drink. Hope everyone enjoyed their weekend and was able to get outside. If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=A great curation of interesting reads & products from the past week http://santoshsankar.com/posts/2014/Sep/28/weekly-reads-28092014/" target="_blank">share</a> this with your family and friends along with a personal message.
+Penn State was on bye this week so I had the opportunity to crush some Swift code and also visit the Smorgasburg in Brooklyn for some great food and drink. Hope everyone enjoyed their weekend and was able to get outside. If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=http://goo.gl/czRS1g" target="_blank">share</a> this with your family and friends along with a personal message.
 
 <img src="/../../../../images/giantsstadium.jpg" style = "float: center">
 
