--- a/content/posts/141012_CnL.md
+++ b/content/posts/141012_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 I must say it feels like 2014 has gone by faster than any year prior to it-- already hitting the midseason mark of college football. I was in Pennsylvania visiting friends for the weekend to watch the Penn State game so wasn't able to get this out on time. Enjoy!
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=A great curation of interesting reads & products from the past week http://santoshsankar.com/posts/2014/Sep/28/weekly-reads-28092014/" target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= http://goo.gl/gCiFOK" target="_blank">share</a> this with your family and friends along with a personal message.
 
 <img src="/../../../../images/napa.jpg" align = "center">
 
