--- a/content/posts/141018_CnL.md
+++ b/content/posts/141018_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Why not get a head start on those weekend reads? I can also focus on cleaning up some of my notes from Start Up School in order to publish them tomorrow for anyone interested. After giving Pelican a try for a few months with this bland theme, I think it's time to make some design changes. Likely a project for the holidays.
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= http://goo.gl/0kFSdU" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/minnetonka.jpg" align = "center">
 
