--- a/content/posts/141024_CnL.md
+++ b/content/posts/141024_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Getting out Coffee & Links early this week as I head down to my alma mater for a weekend of football (and a much needed get-a-way from NYC). 
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= http://goo.gl/0kFSdU" target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= http://goo.gl/Ex58xZ" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/kilkennybar.jpg" align = "center">
 
