--- a/content/posts/141102_CnL.md
+++ b/content/posts/141102_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 The year has flown by, already November 2nd. One of my mentors tells me the years just fly by the older we get... seems like there's some truth to it. With a couple months left in the year, it's time to look at all those goals from January 1st. I might have bit a little more than I could chew but I would say most things were accomplished. We'll see what else I can knock off in the next two months. Now on to the reads--
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=http://goo.gl/hkR0OB" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/haleakala.jpg" align = "center">
 
