--- a/content/posts/141109_CnL.md
+++ b/content/posts/141109_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Nothing worse than being stuck indoors on the weekend with a sinus infection.  On the bright side, there was more reading that got done, more wireframing finished and more Swift that was coded.
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= "http://goo.gl/zD23Hh" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/gunks.jpg" align = "center">
 
