--- a/content/posts/141116_CnL.md
+++ b/content/posts/141116_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Good Morning from Chattanooga! After a busy week traveling to San Fran for work, it was great to get outdoors and enjoy what I think is the most underrated city in the country. Later this week, I will be sharing a great Kickstarter from a quality team here that is pioneering eco-friendly tree houses with full gigabit internet access. On that note-- enjoy this week's reads!
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= "http://goo.gl/W04Q0u" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/chatbridge.jpg" align = "center">
 
