--- a/content/posts/141123_CnL.md
+++ b/content/posts/141123_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Well up here in NYC, the Christmas decorations are coming out with some public properties already lighting up lamp posts and wreaths. That's my sign that it is ok to breakout the Christmas playlists, specifically the Michael Buble Christmas album-- already a classic in my opinion. Picked up quite a few interesting tidbits this week along with some cool products including a luxury, eco-friendly and high-tech treehouse as well as a personal butler.
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= "http://goo.gl/3FQAgB" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/freibergVineyard.jpg" align = "center">
 
