--- a/content/posts/141127_CnL.md
+++ b/content/posts/141127_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 By my record, it has been one year since I returned to blogging- good to see that I've been relatively good at sticking with writing weekly. Hopefully there are some interesting tidbits to peruse here while waiting for dinner. Happy Thanksgiving to you and your loved ones!
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= " target="_blank">share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status= "http://goo.gl/Dv5zFJ" target="_blank">share</a> this with your family and friends.
 
 <img src="/../../../../images/cannonlookoutpt.jpg" align = "center">
 
