--- a/content/posts/141207_CnL.md
+++ b/content/posts/141207_CnL.md
@@ -8,9 +8,9 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 Hopefully everyone is spreading holiday cheer, exercising goodwill towards men and women, donning ugly Christmas sweaters and indulging in eggnog. Enjoy this week's roundup-- highly suggest the Naithan Jones interview while lounging. Cheers!
 
-If you do find an interesting article or product on here, please <”http://twitter.com/home?status=Check out Coffee & Links: [ ]”>share</a> this with your family and friends.
+If you do find an interesting article or product on here, please <a href=”http://twitter.com/home?status=Check out Coffee & Links: http://goo.gl/Ygwsx6”>share</a> this with your family and friends.
 
-<img src="/../../../../images/bruges3.jpg" align = "center">
+<p align= "center"><img src="/../../../../images/bruges3.jpg" align = "center"></p>
 
 ## Coffee & Links
 
