--- a/content/posts/141214_CnL.md
+++ b/content/posts/141214_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 This week marked the first snow in NYC and it finally feels like Christmas. For our friends on the West Coast, this week brought some much-needed rain with the "superstorm." Regardless, hope everyone is enjoying themselves and *living in the moment, not counting down the days till 2015. Make the most of what you have, today.*
 
-If you do find an interesting article or product on here, please <a href = ”http://twitter.com/home?status=Check out Coffee & Links”>share</a> this with your family and friends.
+If you do find an interesting article or product on here, please share this with your family and friends.
 
 <p align = "center"><img src="/../../../../images/mauicruise.jpg"></p>
 
