--- a/content/posts/141221_CnL.md
+++ b/content/posts/141221_CnL.md
@@ -12,7 +12,7 @@ Separately, I shared <a href="http://www.sleepinatree.co" target="_blank">The Tr
 
 If you do find an interesting article or product on here, please share this with your family and friends.
 
-<p align = "center"><img src="/../../../../images/gramercyTree.jpg">
+<p align = "center"><img src="/../../../../images/christmasLights.jpg">
 </p>
 
 ## Coffee & Links
@@ -43,4 +43,4 @@ If you do find an interesting article or product on here, please share this with
 
 * **<a href = "https://itunes.apple.com/us/app/chat-sports/id819629553?mt=8" target="_blank">Chat Sports</a>**. I've been looking for a faster, sleeker alternative to Bleacher Report and this might be it. You can follow live scores, news across traditional and social channels as well as share sports "stuff" with friends all from one app
 
-*Picture: Christmas Tree in the Gramercy Park Solitude, New York, NY, Winter 2014. Taken by Santosh Sankar using the LG G3.*
+*Picture: Christmas Lights in Gramercy, New York, NY, Winter 2014. Taken by Santosh Sankar using the LG G3. Filtered with Instagram*
