--- a/content/posts/150111_CnL.md
+++ b/content/posts/150111_CnL.md
@@ -6,7 +6,7 @@ Slug: weekly-reads-20150111
 Author: Santosh Sankar
 Summary: A selection of articles from around the web focused on business, tech, products, product management, entrepreneurship, leadership, VC, growth, and angel investing.
 
-The first week back from the holidays is always tough (especially with the kind of cold we've had here in the Northeast). Hopefully, this weekend has been a good opportunity to get your ducks in-a-row with some time to relax and read your favorite weekly roundup, Coffee & Links.
+The first week back from the holidays is always tough (especially with the kind of cold we've had here in the Northeast). Hopefully, this weekend has been a good opportunity to get your ducks in-a-row and find some time to relax and read your favorite weekly roundup, Coffee & Links.
 
 If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=Check out Coffee & Links: [ ]”>share</a> this with your family and friends.
 
