--- a/content/posts/150111_CnL.md
+++ b/content/posts/150111_CnL.md
@@ -8,7 +8,7 @@ Summary: A selection of articles from around the web focused on business, tech, 
 
 The first week back from the holidays is always tough (especially with the kind of cold we've had here in the Northeast). Hopefully, this weekend has been a good opportunity to get your ducks in-a-row and find some time to relax and read your favorite weekly roundup, Coffee & Links.
 
-If you do find an interesting article or product on here, please <a href="http://twitter.com/home?status=Check out Coffee & Links: [ ]”>share</a> this with your family and friends.
+If you do find an interesting article or product on here, please share this with your family and friends.
 
 <p align = "center"><img src="/../../../../images/hHighwayOutlook.jpg">
 </p>
