--- a/content/posts/150111_CnL.md
+++ b/content/posts/150111_CnL.md
@@ -26,7 +26,7 @@ If you do find an interesting article or product on here, please share this with
 * **<a href = "http://www.coindesk.com/state-bitcoin-2015-ecosystem-grows-despite-price-decline/" target="_blank">State of Bitcoin</a>**. A great Slideshare from Coindesk. 2014 was a volatile year for Bitcoin and the latest problems at Bitstamp likely haven't helped with price stability. Nonetheless, the future is still bright with ongoing investments aiding the build out of the Bitcoin platform
 
 <p align ="center">
-<iframe src="//www.slideshare.net/slideshow/embed_code/43281911" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/CoinDesk/state-of-bitcoin-2015" title="State of Bitcoin 2015" target="_blank">State of Bitcoin 2015</a> </strong> from <strong><a href="//www.slideshare.net/CoinDesk" target="_blank">CoinDesk</a></strong> </div></p>
+<iframe src="//www.slideshare.net/slideshow/embed_code/43281911" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> </div></p>
 
 ## Pastries & Products
 
